--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -153,70 +153,150 @@ body {
 }
 
 .container__skills {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    h2 {
-        margin-top: 0px;
-        }
-
-    &-graphics {
         display: flex;
         flex-direction: column;
-        width: 100%;
         align-items: center;
-        padding: 0px 200px;
-    }
 
-    &-item {
-        display: flex;
-        flex-direction: row;
-        height: 50px;
-        width: 100%;
-        align-items: center;
-        justify-content: space-between;
-        margin: 10px 0px;
-        background-color: #54be90;
-
-
-        & h3 {
+        &_item {
             display: flex;
             flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            margin: 0px;
+            background-color: $green;
+            width: 70vw;
+            margin-bottom: 10px;
+            justify-content: space-between;
+
+            & h3 {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                color: white;
+                padding: 10px 0px;
+                margin: 0px;
+                background-color: $dark_gray;
+                width: 6em;
+                font-weight: 400;
+            }
+
+            & p {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                background-color: $light_gray;
+                padding: 10px 10px;
+                margin: 0px;
+                color: $dark_gray;
+            }
+
+            &:nth-of-type(1) {
+                p{
+                    width: 10%;
+                }
+            }
+
+            &:nth-of-type(2) {
+                p {
+                        width: 10%;
+                    }
+            }
+
+            &:nth-of-type(3) {
+                p {
+                    width: 20%;
+                }
+            }
+            &:nth-of-type(4) {
+                p {
+                    width: 30%;
+                }
+            }
+            &:nth-of-type(5) {
+                p {
+                    width: 20%;
+                }
+            }
+            &:nth-of-type(6) {
+                p {
+                    width: 30%;
+                }
+            }
+            &:nth-of-type(7) {
+                p {
+                    width: 30%;
+                }
+            }
+            &:nth-of-type(8) {
+                p {
+                    width: 40%;
+                }
+            }
+            }
         }
 
-        & p {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            margin: 0px;
-        }
+// .container__skills {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
 
-    &-HTML {
-        p {
-            margin-right: 20px;
-        }
-    }
-    }
+//     h2 {
+//         margin-top: 0px;
+//         }
 
-    &_skill-name {
-        display: flex;
-        flex-direction: row;
-        width: 150px;
-        height: inherit;
-        background-color: #444444;
-        color: white;
-        justify-content: center;
-    }
+//     &-graphics {
+//         display: flex;
+//         flex-direction: column;
+//         width: 100%;
+//         align-items: center;
+//         padding: 0px 200px;
+//     }
 
-    &_skill-percentage {
-        height: inherit;
-        background-color: #ebebeb;
-    }
-}
+//     &-item {
+//         display: flex;
+//         flex-direction: row;
+//         height: 50px;
+//         width: 100%;
+//         align-items: center;
+//         justify-content: space-between;
+//         margin: 10px 0px;
+//         background-color: #54be90;
+
+
+//         & h3 {
+//             display: flex;
+//             flex-direction: row;
+//             align-items: center;
+//             justify-content: center;
+//             margin: 0px;
+//         }
+
+//         & p {
+//             display: flex;
+//             flex-direction: row;
+//             align-items: center;
+//             margin: 0px;
+//         }
+
+//     &-HTML {
+//         p {
+//             margin-right: 20px;
+//         }
+//     }
+//     }
+
+//     &_skill-name {
+//         display: flex;
+//         flex-direction: row;
+//         width: 150px;
+//         height: inherit;
+//         background-color: #444444;
+//         color: white;
+//         justify-content: center;
+//     }
+
+//     &_skill-percentage {
+//         height: inherit;
+//         background-color: #ebebeb;
+//     }
+// }
 
 .portfolio {
     display: flex;
