--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -119,6 +119,7 @@ body {
 
     h3 {
         font-size: $h3_font_size;
+        color: $green;
     }
 
     &-steps {
@@ -132,7 +133,7 @@ body {
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
             width: 70%;
             text-align: center;
             padding: 0px 1.75em;
@@ -232,72 +233,6 @@ body {
             }
         }
 
-// .container__skills {
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-
-//     h2 {
-//         margin-top: 0px;
-//         }
-
-//     &-graphics {
-//         display: flex;
-//         flex-direction: column;
-//         width: 100%;
-//         align-items: center;
-//         padding: 0px 200px;
-//     }
-
-//     &-item {
-//         display: flex;
-//         flex-direction: row;
-//         height: 50px;
-//         width: 100%;
-//         align-items: center;
-//         justify-content: space-between;
-//         margin: 10px 0px;
-//         background-color: #54be90;
-
-
-//         & h3 {
-//             display: flex;
-//             flex-direction: row;
-//             align-items: center;
-//             justify-content: center;
-//             margin: 0px;
-//         }
-
-//         & p {
-//             display: flex;
-//             flex-direction: row;
-//             align-items: center;
-//             margin: 0px;
-//         }
-
-//     &-HTML {
-//         p {
-//             margin-right: 20px;
-//         }
-//     }
-//     }
-
-//     &_skill-name {
-//         display: flex;
-//         flex-direction: row;
-//         width: 150px;
-//         height: inherit;
-//         background-color: #444444;
-//         color: white;
-//         justify-content: center;
-//     }
-
-//     &_skill-percentage {
-//         height: inherit;
-//         background-color: #ebebeb;
-//     }
-// }
-
 .portfolio {
     display: flex;
     flex-direction: column;
@@ -328,6 +263,8 @@ body {
 
         &:hover {
             background-color: black;
+            align-items: center;
+            justify-content: center;
             }
     }
 
